--- a/FRONTEND-REACT/semillita/src/App.css
+++ b/FRONTEND-REACT/semillita/src/App.css
@@ -10,13 +10,11 @@ body {
     overflow: visible;
 }
 
-
 h1 {
     font-size: 4em;
     margin: 25px;
 }
 .subtitulo {
-   
     width: 80%;
     background-color: rgb(61, 148, 54);
     box-shadow: 0px 0px 5px 5px rgba(61, 148, 54, 0.7);
@@ -186,13 +184,6 @@ place-items: center;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    animation: fadeIn 4s;
-    
-}
-
-@keyframes fadeIn{
-    0%{ opacity: 0;}
-    100%{opacity: 1;}
 }
 
 .tabla1 {
@@ -200,7 +191,6 @@ place-items: center;
     width: 78%;
     margin-right: 1em;
     margin-left: 1em;
-    animation: fadeIn 14s;
 }
 
 .col {
@@ -218,36 +208,8 @@ place-items: center;
     color: black;
     margin-top: 20px;
 }
-
-.imagen_registro{
-
-    
-    width: 50%;
-    height: 50%;
-    margin-left: 7em;
-    margin-top: 2em;
-    display: block;
-    background-image: url(./imagenes/semillita_logo.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    
-
-}
-
-.texto_login{
-
-    
-    width: 100%;
-    height: 5em;
-    margin-top: 3em;
-    margin-left: 2em;
-    text-align: center;
-    display: block;
-}
-
-.texto_login label{
-
-    color:black;
+.columna1 input{
+    color: black;
 }
 
 /*BOTON ANIMADO REGISTRARSE*/
@@ -286,6 +248,20 @@ place-items: center;
     justify-content: center;
     padding: 8px;
     margin-left: 6em;
+}
+.imagen_registro{
+    margin-left: 15%;
+    margin-bottom: 10px;
+    width: 80%;
+    height: 60%;
+    background-image: url(./imagenes/semillita_logo.png);
+    background-position: center;
+    background-size: 100%;
+
+}
+.texto_login label{
+    margin: 25px;
+    color: black;
 }
 
 /*ESTILOS Contacto*/
@@ -360,6 +336,10 @@ place-items: center;
     text-align: center;
 }
 
+.top{
+    width: 110%;
+
+}
 
 .MiR,
 .PR,
@@ -390,9 +370,9 @@ place-items: center;
     position: absolute;
     transition: opacity 0.7s ease-in-out;
     width: 80%;
-    border-radius: 100%;
+    border-radius: 99%;
     margin-bottom: 10%;
-    background-color:rgb(88, 107, 123);
+    background-color:rgb(93, 121, 143);
 }
 
 .contenedor img.top:hover {
